[tool.poetry]
name = "pt_databricksfeature"
version = "0.1.0"
description = "Mlops team repo"
author = ["az_bajames@gap.com"]
license = "Proprietary"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
typer = "^0.3.2"
pandas = "^1.3.2"
gin-config = "^0.4.0"
scikit-learn = "^0.24.2"
python-json-logger = "^2.0.2"
nptyping = "^1.4.4"

[tool.poetry.dev-dependencies]
bumpver = "^2021.1113"
pytest = "^6.2.4"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
xenon = "^0.7.3"
radon = "4.5.2"
pre-commit = "^2.14.0"
black = {version = "^21.7b0", allow-prereleases = true}
testfixtures = "^6.18.1"
ipykernel = "^6.4.1"

[tool.poetry.scripts]
gapml = "pt_databricksfeature.console:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "interface: marks test ment to keep interface integrity",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "[version-update] {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "version {version}",
    "img.shields.io/static/v1.svg?label=version&message={version}&color=blue"
]
"pt_databricksfeature/VERSION" = [
    "{version}",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
                     # the root of the project
)
'''
